Refactor: Replace deprecated wrapper constructors with valueOf methods (#9)
* Refactor: Use valueOf instead of wrapper constructors for better performance and clarity

* remove comments